# humanizer-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  index.html
npm/: README.md  package.json
share/: README.md  humanizer-mcp-boss-guide.html  humanizer-mcp-friends-guide.html
skill/: README.md
skill/humanizer-mcp/: SKILL.md
src/humanizer_mcp/: __init__.py  __main__.py  server.py
tests/: test_analysis.py
